refactor: Order-OrderItem 연관관계 단방향 전환 및 서비스 통합
Order → OrderItem의 양방향 연관관계를 단방향(ManyToOne)으로 변경하고,
OrderService에 OrderItem 저장 로직을 통합했습니다.

이에 따라 관련된 서비스 및 테스트 코드들도 모두 리팩토링하였습니다.
통합 테스트 및 단위 테스트 정상 통과를 확인했습니다.